se agrego pagina de contact con mapa usando leaflet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="overflow">
 
     <body>
-        <header>
+        <header class="header__home" >
             <div class="overlay">
                 <nav>
                     <div class="container">
@@ -28,7 +28,7 @@
                                     <li class="desktop__menu--item" ><a href="">Home</a></li>
                                     <li class="desktop__menu--item" ><a href="">Services</a></li>
                                     <li class="desktop__menu--item" ><a href="">About</a></li>
-                                    <li class="desktop__menu--item" ><a href="">Contact</a></li>
+                                    <li class="desktop__menu--item" ><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -246,6 +246,8 @@
                     <a href=""><i class="fab fa-facebook-f"></i></a>
                     <a href=""><i class="far fa-envelope"></i></a>
                 </div>
+
+                <p class="attribution" >Made by <a href="">Marketing Digital M&Y	&copy;</a></p>
             </div>
         </footer>
         
