se crearon las paginas para cada uno de los servicios

--- a/businesstax.html
+++ b/businesstax.html
@@ -13,9 +13,8 @@
     <script src="app.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Lora:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-        <title>Contact Us</title>
+        <title>Business Tax Services</title>
     </head>
-
     <div class="overflow">
         <body>
             <header class="height__auto">
@@ -40,7 +39,7 @@
                                         </div>
                                     </li>
                                     <li class="desktop__menu--item" ><a href="about.html">About</a></li>
-                                    <li class="desktop__menu--item" ><a href="">Contact</a></li>
+                                    <li class="desktop__menu--item" ><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -73,7 +72,7 @@
                                         <i class="fab fa-facebook-f"></i>
                                         <i class="far fa-envelope"></i>
                                     </div>
-
+    
                                 </div>
                             </div>
         
@@ -93,12 +92,12 @@
             </header>
 
             <main class="services__main container">
-                <h1 class="service__header" >Immigration Consultation</h1>
-                <p>We apply forward-thinking ideas and solutions to the most challenging legal issues you face, and approach each case with passion and commitment. From the first steps of the litigation process and right through to the end, we’ll handle everything you need to be in your best shape at trial. We know how complicated litigation can be. From pleadings, affidavits, examinations, motions, mediation, undertakings, refusals, pretrial, and finally, trial.
+                <h1 class="service__header" >Business Tax Services</h1>
+                <p>We help create business entities, such as corporations, partnerships and joint ventures. We also represent both foreign and domestic companies to ensure the legal passage of goods, services, capital and more across borders. Our clients include multinational companies as well as small businesses.  
                     <br><br>
-                    We apply forward-thinking ideas and solutions to the most challenging legal issues you face, and approach each case with passion and commitment. From the first steps of the litigation process and right through to the end, we’ll handle everything you need to be in your best shape at trial. We know how complicated litigation can be. From pleadings, affidavits, examinations, motions, mediation, undertakings, refusals, pretrial, and finally, trial.
+                    We help create business entities, such as corporations, partnerships and joint ventures. We also represent both foreign and domestic companies to ensure the legal passage of goods, services, capital and more across borders. Our clients include multinational companies as well as small businesses.  
                     <br><br>
-                    We apply forward-thinking ideas and solutions to the most challenging legal issues you face, and approach each case with passion and commitment. From the first steps of the litigation process and right through to the end, we’ll handle everything you need to be in your best shape at trial. We know how complicated litigation can be. From pleadings, affidavits, examinations, motions, mediation, undertakings, refusals, pretrial, and finally, trial.</p>
+                    We help create business entities, such as corporations, partnerships and joint ventures. We also represent both foreign and domestic companies to ensure the legal passage of goods, services, capital and more across borders. Our clients include multinational companies as well as small businesses. </p>
 
                     <section class="contact" id="contact" >
                         <div class="container">
