--- a/translation&interpretation.html
+++ b/translation&interpretation.html
@@ -13,8 +13,9 @@
     <script src="app.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Lora:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-        <title>Contact Us</title>
+        <title>Translation & Interpretation</title>
     </head>
+
 
     <div class="overflow">
         <body>
@@ -40,7 +41,7 @@
                                         </div>
                                     </li>
                                     <li class="desktop__menu--item" ><a href="about.html">About</a></li>
-                                    <li class="desktop__menu--item" ><a href="">Contact</a></li>
+                                    <li class="desktop__menu--item" ><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -92,13 +93,14 @@
                 </div>
             </header>
 
+            
             <main class="services__main container">
-                <h1 class="service__header" >Immigration Consultation</h1>
-                <p>We apply forward-thinking ideas and solutions to the most challenging legal issues you face, and approach each case with passion and commitment. From the first steps of the litigation process and right through to the end, we’ll handle everything you need to be in your best shape at trial. We know how complicated litigation can be. From pleadings, affidavits, examinations, motions, mediation, undertakings, refusals, pretrial, and finally, trial.
+                <h1 class="service__header" >Translation & Interpretation</h1>
+                <p>We provide both public and private sector employers with practical and strategic advice and guidance to assist in making sound decisions that are consistent with applicable labor laws and best practices. As experts in traditional employment law services and specialize in human rights, pay equity, and occupational safety law.
                     <br><br>
-                    We apply forward-thinking ideas and solutions to the most challenging legal issues you face, and approach each case with passion and commitment. From the first steps of the litigation process and right through to the end, we’ll handle everything you need to be in your best shape at trial. We know how complicated litigation can be. From pleadings, affidavits, examinations, motions, mediation, undertakings, refusals, pretrial, and finally, trial.
+                    We provide both public and private sector employers with practical and strategic advice and guidance to assist in making sound decisions that are consistent with applicable labor laws and best practices. As experts in traditional employment law services and specialize in human rights, pay equity, and occupational safety law.
                     <br><br>
-                    We apply forward-thinking ideas and solutions to the most challenging legal issues you face, and approach each case with passion and commitment. From the first steps of the litigation process and right through to the end, we’ll handle everything you need to be in your best shape at trial. We know how complicated litigation can be. From pleadings, affidavits, examinations, motions, mediation, undertakings, refusals, pretrial, and finally, trial.</p>
+                    We provide both public and private sector employers with practical and strategic advice and guidance to assist in making sound decisions that are consistent with applicable labor laws and best practices. As experts in traditional employment law services and specialize in human rights, pay equity, and occupational safety law.</p>
 
                     <section class="contact" id="contact" >
                         <div class="container">
@@ -166,6 +168,7 @@
                     <p class="attribution" >Made by <a href="">Marketing Digital M&Y	&copy;</a></p>
                 </div>
             </footer>
+            
         </body>
 
     </div>
