se corrigieron enlaces muertos

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   </head>
   <div class="overflow">
     <body>
-      <header class="header__home">
+      <header class="header__home fader">
         <div class="overlay">
-          <nav class="fader">
+          <nav>
             <div class="container">
               <div class="desktop__nav">
                 <div class="logo">
@@ -65,7 +65,7 @@
                       </div>
                     </li>
                     <li class="desktop__menu--item hover__blue">
-                      <a href="">About</a>
+                      <a href="about.html">About</a>
                     </li>
                     <li class="desktop__menu--item hover__blue">
                       <a href="contact.html">Contact</a>
@@ -121,9 +121,24 @@
                     </ul>
 
                     <div class="mobile__social">
-                      <i class="fab fa-instagram"></i>
-                      <i class="fab fa-facebook-f"></i>
-                      <i class="far fa-envelope"></i>
+                      <a
+                        href="https://www.instagram.com/ipsimmigracionprocessing/"
+                        rel="noopener noreferrer"
+                        target="_blank"
+                        ><i class="fab fa-instagram"></i
+                      ></a>
+                      <a
+                        href="https://www.facebook.com/ricardoipsservice/"
+                        rel="noopener noreferrer"
+                        target="_blank"
+                        ><i class="fab fa-facebook-f"></i
+                      ></a>
+                      <a
+                        href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ricardoipsservice@gmail.com"
+                        rel="noopener noreferrer"
+                        target="_blank"
+                        ><i class="far fa-envelope"></i
+                      ></a>
                     </div>
                   </div>
                 </div>
@@ -133,7 +148,7 @@
             </div>
           </nav>
 
-          <div class="hero fader" id="hero">
+          <div class="hero" id="hero">
             <div class="container">
               <div class="hero__text">
                 <h1>IMMIGRATION CONSULTING <span>SPECIALIST</span></h1>
@@ -145,9 +160,24 @@
               </div>
 
               <div class="hero__social">
-                <a href=""><i class="fab fa-instagram"></i></a>
-                <a href=""><i class="fab fa-facebook-f"></i></a>
-                <a href=""><i class="far fa-envelope"></i></a>
+                <a
+                  href="https://www.instagram.com/ipsimmigracionprocessing/"
+                  rel="noopener noreferrer"
+                  target="_blank"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+                <a
+                  href="https://www.facebook.com/ricardoipsservice/"
+                  rel="noopener noreferrer"
+                  target="_blank"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+                <a
+                  href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ricardoipsservice@gmail.com"
+                  rel="noopener noreferrer"
+                  target="_blank"
+                  ><i class="far fa-envelope"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -344,11 +374,22 @@
           <div class="footer__social">
             <a
               href="https://www.instagram.com/ipsimmigracionprocessing/"
+              rel="noopener noreferrer"
               target="_blank"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href=""><i class="fab fa-facebook-f"></i></a>
-            <a href=""><i class="far fa-envelope"></i></a>
+            <a
+              href="https://www.facebook.com/ricardoipsservice/"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a
+              href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ricardoipsservice@gmail.com"
+              rel="noopener noreferrer"
+              target="_blank"
+              ><i class="far fa-envelope"></i
+            ></a>
           </div>
 
           <p class="attribution">
